--- a/style.css
+++ b/style.css
@@ -14,8 +14,13 @@ fieldset {
     border: none;
 }
 a {
+    border-bottom: 2px solid transparent;
+    transition: var(--transition);
     text-decoration: none;
     color: inherit;
+}
+a:hover {
+    border-color: inherit;
 }
 
 label {
@@ -92,19 +97,21 @@ body {
 	*/
 }
 
+.extra-btns-section {
+    display: flex;
+    flex-direction: column;
+}
+
 #project-header a,
 #project-header button {
     font-size: 1.2em;
 }
-#project-header a {
-    border-bottom: 2px solid transparent;
-}
+
 #project-header button {
     border: none;
     border-bottom: 2px solid transparent;
     background-color: transparent;
 }
-#project-header a:hover,
 #project-header button:hover {
     border-color: black;
 }
@@ -176,54 +183,22 @@ body {
     color: var(--clr-light-teal);
 }
 
-.positions-output-section {
-    border-radius: var(--border-radius);
-    padding: 12px;
-    background-color: white;
-    height: 125px;
-    overflow-y: scroll;
-}
-
-.positions-list {
-    margin-top: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 8px;
-}
-.path-position-btn {
-    padding: 4px;
-    border-radius: 4px;
-    border: 2px solid black;
-    font-weight: 700;
-    transition: var(--transition);
-    cursor: pointer;
-}
-.path-position-btn:hover {
-    background-color: black;
-    color: white;
-}
-
-/* And then some data-active class */
-.path-position-btn[data-active="true"] {
-    background-color: black;
-    color: white;
-}
-
 /* 
 - Set a max-width, and make sure width is always 100%. This allows for the grid 
 to be able to shrink and be somewhat responsive. Aspect ratio keeps the grid 
 a square.
 
 */
+
 .chessboard-grid {
     max-width: 500px;
     width: 100%;
-    aspect-ratio: 1;
     border: 3px solid black;
+    margin: 0 auto;
+    aspect-ratio: 1;
+    position: relative;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    margin: 0 auto;
 }
 
 .chess-square {
@@ -240,9 +215,7 @@ a square.
     /* Helps when shrinking */
     overflow: hidden;
 }
-.chess-square:hover {
-    border-color: black;
-}
+
 .chess-square.dark-square {
     background-color: var(--clr-emerald);
 }
@@ -262,11 +235,10 @@ a square.
     right: 0;
 }
 
-.chess-piece {
+.chess-canvas {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 }
 
 #project-footer {
@@ -279,6 +251,7 @@ a square.
     margin-top: 6px;
     display: flex;
     flex-direction: column;
+    row-gap: 4px;
 }
 
 /* 
