--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 12px;
+    row-gap: 8px;
     text-align: center;
 }
 
@@ -91,10 +91,6 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 4px;
-    /* 
-	NOTE: On bigger screens you may discard this idea of having the menu in vertical form, so you
-	may need to use something like height: auto !important, but hold off for right now
-	*/
 }
 
 .extra-btns-section {
@@ -120,20 +116,9 @@ body {
 #project-main-content {
     background-color: var(--clr-light-teal);
     padding: 20px 8px;
+    row-gap: 20px;
     display: grid;
-    grid-template-rows: auto;
-    display: grid;
-    grid-template-rows: auto;
-    row-gap: 24px;
-}
-
-.main-header {
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    justify-content: center;
     align-items: center;
-    row-gap: 24px;
-    text-align: center;
 }
 
 .chess-form-container {
@@ -190,6 +175,12 @@ a square.
 
 */
 
+.chess-canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .chessboard-grid {
     max-width: 500px;
     width: 100%;
@@ -235,12 +226,6 @@ a square.
     right: 0;
 }
 
-.chess-canvas {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 #project-footer {
     display: flex;
     flex-direction: column;
@@ -254,12 +239,18 @@ a square.
     row-gap: 4px;
 }
 
-/* 
-- Book mark: Research about how to draw lines between the divs on the 
-thing. Then After I think we should generate the html with javascript. 
-Also be sure to make a copy of the html so that we can easily do styling 
-on another tab.
+/* Media queries */
+@media screen and (min-width: 600px) {
+    #header-drop-down-btn {
+        display: none;
+    }
 
+    .header-nav {
+        height: auto !important;
+    }
 
-
-*/
+    .header-nav-links {
+        flex-direction: row;
+        column-gap: 12px;
+    }
+}
